--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
 			<artifactId>pem-keystore</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+
+			<groupId>com.sun.mail</groupId>
+
+			<artifactId>javax.mail</artifactId>
+
+			<version>1.6.2</version>
+
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
