--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,20 @@ server.ssl.key-store-password=password
 server.ssl.key-store-type=JKS
 server.ssl.key-alias=exchangebtc
 
+spring.cloud.gcp.credentials.location = ${sm://gcp_service_account}
+spring.cloud.gcp.project-id=lloyds-hack-grp-44
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/entreaty
-spring.datasource.username = root
-spring.datasource.password = 143@Arpilu
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:postgresql://34.105.219.35/postgres?useSSL=false
+spring.jpa.properties.hibernate.dialect : org.hibernate.dialect.PostgreSQLDialect
+spring.cloud.gcp.sql.database-name=postgres
+spring.cloud.gcp.sql.instance-connection-name=lloyds-hack-grp-44:europe-west2:hack-grp-44
+
+spring.datasource.username = postgres
+spring.datasource.password = hackgrp44
+
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
@@ -57,4 +66,3 @@ cloud.aws.s3.bucket=btc-qr-detail
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-
