--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,9 @@ spring.cloud.gcp.project-id=lloyds-hack-grp-44
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:postgresql://34.105.219.35/postgres?useSSL=false
-spring.jpa.properties.hibernate.dialect : org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.cloud.gcp.sql.database-name=postgres
 spring.cloud.gcp.sql.instance-connection-name=lloyds-hack-grp-44:europe-west2:hack-grp-44
-
 spring.datasource.username = postgres
 spring.datasource.password = hackgrp44
 
