--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,16 @@ server.ssl.key-store-type=JKS
 server.ssl.key-alias=exchangebtc
 
 spring.cloud.gcp.credentials.location = ${sm://gcp_service_account}
-spring.cloud.gcp.project-id=lloyds-hack-grp-44
+spring.cloud.gcp.project-id=data-fabric-430708-h4
 
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:postgresql://192.168.64.2/postgres?useSSL=false
+spring.datasource.url = jdbc:postgresql://34.46.234.130:5432/postgres?useSSL=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.cloud.gcp.sql.database-name=postgres
-spring.cloud.gcp.sql.instance-connection-name=lloyds-hack-grp-44:europe-west2:hack-grp-44
+spring.cloud.gcp.sql.instance-connection-name=data-fabric-430708-h4:us-central1:mypostgres
 spring.datasource.username = postgres
-spring.datasource.password = hackgrp44
+spring.datasource.password = postgres
 
 
 spring.jpa.generate-ddl=true
