--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.cloud.gcp.credentials.location = ${sm://gcp_service_account}
 spring.cloud.gcp.project-id=data-fabric-430708-h4
 
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:postgresql://34.46.234.130:5432/postgres?useSSL=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url = jdbc:postgresql://34.46.234.130:5432/postgres?useSSL=false
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.cloud.gcp.sql.database-name=postgres
 spring.cloud.gcp.sql.instance-connection-name=data-fabric-430708-h4:us-central1:mypostgres
