--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.cloud.gcp.project-id=data-fabric-430708-h4
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://34.46.234.130:5432/postgres?useSSL=false
-#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url = jdbc:postgresql://34.46.234.130:5432/postgres?useSSL=false
+spring.datasource.url = jdbc:postgresql://10.82.192.3:5432/postgres?useSSL=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.cloud.gcp.sql.database-name=postgres
 spring.cloud.gcp.sql.instance-connection-name=data-fabric-430708-h4:us-central1:mypostgres
